seoul/1_cicd/app-files/gac-gitops/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gac-service
  namespace: gacns
spec:
  selector:
    app: gac-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
