seoul/1_cicd/app-files/gac-gitops/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gac-ingress
  namespace: gacns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0cb891468fb89f17e,subnet-01918e813b2b0d62a
    alb.ingress.kubernetes.io/group.name: gac-ingress-group
    # alb.ingress.kubernetes.io/security-groups: sg-0a10617218ad3341a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/tags: Name=gac-alb
    alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gac-service
                port:
                  number: 8080
